Modificando o actions do sonar

--- a/.github/workflows/python-testes.yml
+++ b/.github/workflows/python-testes.yml
@@ -45,27 +45,10 @@ jobs:
     needs: test  # Dependência do job de testes
 
     steps:
-      # Checkout do código
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      # Baixar o relatório de cobertura
-      - name: Download coverage report
-        uses: actions/download-artifact@v3
+      - uses: actions/checkout@v4
         with:
-          name: coverage-report
-
-      # Configurar SonarCloud Scanner
-      - name: SonarCloud Scan
-        uses: sonarsource/sonarcloud-github-action@v2
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: SonarQube Cloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}  # Armazene o token no GitHub Secrets
-        with:
-          projectBaseDir: .  # Diretório do projeto
-          args: >
-            -Dsonar.organization=paulossjunior-github
-            -Dsonar.projectKey=paulossjunior_calculovolume
-            -Dsonar.python.coverage.reportPaths=coverage.xml
-            -Dsonar.sources=.
-            -Dsonar.tests=.
-            -Dsonar.test.inclusions=**/test_*.py
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
