--- a/.github/workflows/python-testes.yml
+++ b/.github/workflows/python-testes.yml
@@ -51,4 +51,14 @@ jobs:
       - name: SonarQube Cloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          projectBaseDir: .  # Diretório do projeto
+          args: >
+            -Dsonar.organization=paulossjunior-github
+            -Dsonar.projectKey=aulossjunior_calculovolume
+            -Dsonar.python.coverage.reportPaths=coverage.xml
+            -Dsonar.sources=.
+            -Dsonar.tests=.
+            -Dsonar.test.inclusions=**/test_*.py
